--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
                 </div>
             </div>
         </section>
+        <div class="internal-link">
+            <p>Read more about my <a href="projects.html">work</a> in Health Care, Financial Services, Transportation, Call Center, BPO, and HRO.</p>
+        </div>
     </div>
-
-                    <p>Read more about my <a href="projects.html">my work</a> in Health Care, Financial Services, Transportation, Call Center, BPO, and HRO.</p>
 
     <footer>
         <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
