--- a/projects.html
+++ b/projects.html
@@ -167,6 +167,10 @@
             
             <p>These projects involved making the products modular, integrating AI and ML, and updating them to the latest standards, significantly reducing technology debt and enhancing operational efficiency.</p>
         </section>
+        <div class="internal-link">
+            <p>Read more about my <a href="achievements.html">achievements</a> and how they demonstrate my ability to drive technology transformation.</p>
+            <p>* No Confidential data or statistics shared. Generalized and white labelled to protect data privacy of all of companies I have worked for.</p>
+        </div>
     </div>
 
     <footer>
