--- a/achievements.html
+++ b/achievements.html
@@ -174,6 +174,9 @@
             <li>Improved EBITDA by 4% by reducing implementation time from 24 to 9 months.</li>
             </ul>
         </section>
+        <div class="internal-link">
+            <p>Explore my <a href="services.html">expertise</a> to understand how I can contribute to organization's success.</p>
+        </div>
     </div>
 
     <
