--- a/projects.html
+++ b/projects.html
@@ -169,7 +169,7 @@
         </section>
         <div class="internal-link">
             <p>Read more about my <a href="achievements.html">achievements</a> and how they demonstrate my ability to drive technology transformation.</p>
-            <p>* No Confidential data or statistics shared. Generalized and white labelled to protect data privacy of all of companies I have worked for.</p>
+            <p class="disclaimer">*No confidential data or statistics shared. Generalized and white-labeled stats to protect data privacy of all companies I have worked for.</p>
         </div>
     </div>
 
