--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <title>Rahul Gupta - Projects</title>
     <meta name="description" content="Projects led by Rahul Gupta, including technology modernization and AI/ML integration.">
     <meta name="keywords" content="Rahul Gupta, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent">
@@ -105,6 +105,20 @@
                 margin: 0 0 20px 0;
             }
         }
+        .internal-link {
+            margin-top: 20px;
+            text-align: left;
+            font-size: 16px;
+        }
+        .disclaimer {
+            font-size: 14px;
+            color: #666;
+            margin-top: 10px;
+        }
+        .disclaimer-small {
+            font-size: 12px;
+            color: #666;
+        }
     </style>
 </head>
 <body>
@@ -162,14 +176,11 @@
                 <li><strong>Automated Document Management:</strong> Developed automated document management systems to improve efficiency and accuracy.</li>
                 <li><strong>Printmail Solutions:</strong> Streamlined printmail operations, reducing costs and improving turnaround times.</li>
             </ul>
-
-
-            
             <p>These projects involved making the products modular, integrating AI and ML, and updating them to the latest standards, significantly reducing technology debt and enhancing operational efficiency.</p>
         </section>
         <div class="internal-link">
-            <p>Read more about my <a href="achievements.html">achievements</a> and how they demonstrate my ability to drive technology transformation.</p>
-            <p class="disclaimer">*No confidential data or statistics shared. Generalized and white-labeled stats to protect data privacy of all companies I have worked for.</p>
+            <p>Read more about my <a href="achievements.html">achievements*</a> and how they demonstrate my ability to drive technology transformation.</p>
+            <p class="disclaimer">*<span class="disclaimer-small">No confidential data or statistics shared. Generalized and white-labeled stats to protect data privacy of all companies I have worked for.</span></p>
         </div>
     </div>
 
