--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
+    <title>Rahul Gupta - CTO | Technology Transformation Expert |</title>
     <meta name="description" content="Rahul Gupta, CTO, leads or advises organizations in their technology transformation, product modernization, and technology spend optimization. CTO, CIO, CDO">
     <meta name="keywords" content="Rahul Gupta, CTO, Chief Technology Officer, CIO, Chief Information Officer, CDO, Chief Digital Officer, Chief Executive Officer, CEO, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO, executive leadership, digital transformation, IT management, AI integration, machine learning, Conduent, technology spend, operational efficiency, cloud adoption, data analytics, business transformation, product management, platform engineering, security compliance, revenue growth, strategic planning, Healthcare, Health Care, Financial Services, Banking, Insurance, Call Center, BPO, Technology Consulting">
     <meta name="author" content="Rahul Gupta">
