--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
             <p>Or you can contact me at:</p>
             <p>
                 <a href="https://www.linkedin.com/in/rahulguptaconduent/">LinkedIn</a> |
-                <a href="mailto:rahulgupta_33@yahoo.com">rahulgupta_33@yahoo.com</a> |
+                <a href="mailto:rahulgupta_33@yahoo.com">rahulkel.gupta@gmail.com</a> |
                 <a href="mailto:rahul.gupta@outlook.com">rahul.guptac@outlook.com</a>
             </p>
         </section>
