--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology Officer</p>
+            <p>Chief Technology & Information Officer</p>
         </div>
         <nav>
             <ul>
