--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rahul Gupta - CTO | Technology Transformation Expert |</title>
-    <meta name="description" content="Rahul Gupta, CTO, leads or advises organizations in their technology transformation, product modernization, and technology spend optimization. CTO, CIO, CDO">
-    <meta name="keywords" content="Rahul Gupta, CTO, Chief Technology Officer, CIO, Chief Information Officer, CDO, Chief Digital Officer, Chief Executive Officer, CEO, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO, executive leadership, digital transformation, IT management, AI integration, machine learning, Conduent, technology spend, operational efficiency, cloud adoption, data analytics, business transformation, product management, platform engineering, security compliance, revenue growth, strategic planning, Healthcare, Health Care, Financial Services, Banking, Insurance, Call Center, BPO, Technology Consulting">
-    <meta name="author" content="Rahul Gupta">
+    <title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
+    <meta name="description" content="Rahul Gupta, CTO at Conduent, offers expert advisory services in technology transformation, product modernization, and technology spend optimization.">
+    <meta name="keywords" content="Rahul Gupta, CTO, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,8 +25,9 @@
             padding: 10px 0;
             border-bottom: #77a1d3 3px solid;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
+            text-align: center;
         }
         header a {
             color: #fff;
@@ -50,9 +50,13 @@
         }
         header #branding {
             flex: 1;
+            text-align: center;
         }
         header #branding h1 {
             margin: 0;
+        }
+        header #branding p {
+            margin: 5px 0 0 0;
         }
         .section {
             padding: 20px;
@@ -79,7 +83,6 @@
         }
         .flex-container div {
             flex: 1;
-            text-align: left;
         }
         @media (max-width: 768px) {
             .container {
@@ -105,10 +108,6 @@
             .flex-container img {
                 margin: 0 0 20px 0;
             }
-            .flex-container div {
-                text-align: left;
-                width: 100%;
-            }
         }
     </style>
 </head>
@@ -116,7 +115,7 @@
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology & Information Officer</p>
+            <p>Chief Technology and Information Officer</p>
         </div>
         <nav>
             <ul>
