--- a/blog.html
+++ b/blog.html
@@ -98,22 +98,12 @@
     <div class="container">
         <section id="blog" class="section">
             <h2>Blog</h2>
-            <article>
-                <h3><a href="#blog4">Evolution for Enterprises from AI to GenAI</a></h3>
-                <p>Artificial Intelligence (AI) has revolutionized the way enterprises operate, driving efficiencies and innovations across various industries. The advent of Generative AI (GenAI) marks a significant advancement over traditional AI, leveraging large language models (LLMs) and the extensive computational power available on the cloud. This blog explores the evolution from AI to GenAI, differences between the two, and strategic steps for companies to adopt GenAI wisely.</p>
-            </article>
-            <article>
-                <h3><a href="#blog1">Key Trends in Technology Transformation</a></h3>
-                <p>As technology continues to evolve at a rapid pace, staying ahead of the curve is crucial for businesses. In this blog post, we explore the key trends driving technology transformation in 2024.</p>
-            </article>
-            <article>
-                <h3><a href="#blog2">Optimizing Technology Spend: Strategies for Success</a></h3>
-                <p>Optimizing technology spend is essential for maximizing ROI and ensuring sustainable growth. This post delves into effective strategies for managing technology investments.</p>
-            </article>
-            <article>
-                <h3><a href="#blog3">The Role of AI and ML in Modernizing Legacy Systems</a></h3>
-                <p>Artificial intelligence and machine learning are powerful tools for modernizing legacy systems. Learn how these technologies can enhance efficiency and drive innovation.</p>
-            </article>
+            <ol>
+                <li><a href="#blog4">Evolution for Enterprises from AI to GenAI</a></li>
+                <li><a href="#blog1">Key Trends in Technology Transformation</a></li>
+                <li><a href="#blog2">Optimizing Technology Spend: Strategies for Success</a></li>
+                <li><a href="#blog3">The Role of AI and ML in Modernizing Legacy Systems</a></li>
+            </ol>
 
             <!-- Blog 4 -->
             <div id="blog4" class="section">
