--- a/blog.html
+++ b/blog.html
@@ -118,10 +118,10 @@
         <section id="blog" class="section">
             <h2>Blog</h2>
             <ol>
-                <li><a href="#blog4">1. Evolution for Enterprises from AI to GenAI</a></li>
-                <li><a href="#blog1">2. Key Trends in Technology Transformation</a></li>
-                <li><a href="#blog2">3. Optimizing Technology Spend: Strategies for Success</a></li>
-                <li><a href="#blog3">4. The Role of AI and ML in Modernizing Legacy Systems</a></li>
+                <li><a href="#blog4">Evolution for Enterprises from AI to GenAI</a></li>
+                <li><a href="#blog1">Key Trends in Technology Transformation</a></li>
+                <li><a href="#blog2">Optimizing Technology Spend: Strategies for Success</a></li>
+                <li><a href="#blog3">The Role of AI and ML in Modernizing Legacy Systems</a></li>
             </ol>
 
             <input type="checkbox" id="tab4" class="tab">
