--- a/achievements.html
+++ b/achievements.html
@@ -26,7 +26,7 @@
             padding: 10px 0;
             border-bottom: #77a1d3 3px solid;
             display: flex;
-            justify-content: center;
+            justify-content: center; /* Ensure this is present */
             align-items: center;
         }
         header a {
@@ -39,7 +39,7 @@
             padding: 0;
             list-style: none;
             display: flex;
-            justify-content: center;
+            justify-content: center; /* Ensure this is present */
             margin: 0;
         }
         header li {
@@ -50,10 +50,13 @@
         }
         header #branding {
             flex: 1;
-            text-align: center;
+            text-align: center; /* Ensure this is present */
         }
         header #branding h1 {
             margin: 0;
+        }
+        header #branding p {
+            margin: 0; /* Ensure this is present to remove extra space */
         }
         .section {
             padding: 20px;
@@ -149,8 +152,8 @@
             <h3>Leadership and Team Building</h3>
             <ul>
                 <li><strong>Team Expansion:</strong> Grew the Conduent India development center from 1,000 to 4,500+ IT professionals, ensuring 60% of global delivery from India.</li>
-            <li><strong>Stakeholder Trust:</strong> Revived trust with business leaders by fostering a culture of transparency and accountability.</li>
-            <li><strong>Cloud Strategy:</strong> Increased cloud adoption from <10% to 60%, consolidating 102 data centers to fewer than 20.</li>
+                <li><strong>Stakeholder Trust:</strong> Revived trust with business leaders by fostering a culture of transparency and accountability.</li>
+                <li><strong>Cloud Strategy:</strong> Increased cloud adoption from <10% to 60%, consolidating 102 data centers to fewer than 20.</li>
             </ul>
 
             <h3>Client and Market Impact</h3>
@@ -158,26 +161,31 @@
                 <li><strong>Client Implementations:</strong> Successfully managed over 3,000 client implementations, significantly improving client satisfaction and retention.</li>
                 <li><strong>Security and Compliance:</strong> Led the foundation of security controls and compliance, completing a three-year backlogged PCI certification for key clients in six months.</li>
                 <li><strong>Market Leadership:</strong> Positioned Conduent as a leader in real-time payment services through innovative use of blockchain and ledger-based technologies.</li>
+            </ul>
+
+            <h2>Summary:</h2>
             <ul>
-
-        <h2>Summary:</h2>
-
-            <li>Increased re-use of standard products from less than 10% to 70%.</li>
-            <li>Reduced technology spend 40% through a product modernization/transformation program aligned to strategic goals & supplier/vendor optimization program.</li>
-            <li>Payments Hub manages $1B payments in a year for 22 different states and millions of participants. Crafted a vision & product launch for Payments Hub enabling Real Time Payments.</li>
-            <li>Achieved a 50% reduction in installation footprint time and cost for tolling by designing and integrating IoT-enabled roadside lanes.</li>
-            <li>Improved quality by 70% by developing and implementing standardized procedures across all projects.</li>
-            <li>Increased productivity by 20% through the elimination of redundant processes and the optimization of workflows.</li>
-            <li>Developed and launched 25+ AI, ML, and analytics add-on products to enhance core vertical offerings.</li>
-            <li>Contributed to 380+ active patents in computer vision, machine learning, cognitive analytics, AI, IoT, and intelligent automation.</li>
-            <li>Transitioned from 300+ bespoke platforms to 100+ industry-standard technology products, saving $450M in IT costs.</li>
-            <li>Consolidated 102 data centers to less than 20 and increased cloud adoption from less than 10% to 60%.</li>
-            <li>Improved EBITDA by 4% by reducing implementation time from 24 to 9 months.</li>
+                <li>Increased re-use of standard products from less than 10% to 70%.</li>
+                <li>Reduced technology spend 40% through a product modernization/transformation program aligned to strategic goals & supplier/vendor optimization program.</li>
+                <li>Payments Hub manages $1B payments in a year for 22 different states and millions of participants. Crafted a vision & product launch for Payments Hub enabling Real Time Payments.</li>
+                <li>Achieved a 50% reduction in installation footprint time and cost for tolling by designing and integrating IoT-enabled roadside lanes.</li>
+                <li>Improved quality by 70% by developing and implementing standardized procedures across all projects.</li>
+                <li>Increased productivity by 20% through the elimination of redundant processes and the optimization of workflows.</li>
+                <li>Developed and launched 25+ AI, ML, and analytics add-on products to enhance core vertical offerings.</li>
+                <li>Contributed to 380+ active patents in computer vision, machine learning, cognitive analytics, AI, IoT, and intelligent automation.</li>
+                <li>Transitioned from 300+ bespoke platforms to 100+ industry-standard technology products, saving $450M in IT costs.</li>
+                <li>Consolidated 102 data centers to less than 20 and increased cloud adoption from less than 10% to 60%.</li>
+                <li>Improved EBITDA by 4% by reducing implementation time from 24 to 9 months.</li>
             </ul>
         </section>
         <div class="internal-link">
-            <p>Explore my <a href="services.html">expertise</a> to understand how I can contribute to organization's success.</p>
+            <p>Explore my <a href="services.html">expertise</a> to understand how I can contribute to your organization's success.</p>
+            <p style="font-size: smaller; text-align: center; line-height: 1.2;">*No Confidential data or statistics shared. Generalized and white labelled stats to protect data privacy of all companies I have worked for.</p>
         </div>
     </div>
 
-    <
+    <footer>
+        <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
