--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
             padding: 10px 0;
             border-bottom: #77a1d3 3px solid;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
         }
         header a {
@@ -50,9 +50,14 @@
         }
         header #branding {
             flex: 1;
+            text-align: center;
         }
         header #branding h1 {
             margin: 0;
+        }
+
+        header #branding p {
+            margin: 0; /* Ensure this is present to remove extra space */
         }
         .section {
             padding: 20px;
@@ -125,7 +130,7 @@
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology Officer</p>
+            <p>Chief Technology and Information Officer</p>
         </div>
         <nav>
             <ul>
