--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
         }
 
         header #branding p {
-            margin: 0; /* Ensure this is present to remove extra space */
+            margin: 0;
         }
         .section {
             padding: 20px;
