--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - Projects</title>
     <meta name="description" content="Projects led by Rahul Gupta, including technology modernization and AI/ML integration.">
     <meta name="keywords" content="Rahul Gupta, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent">
@@ -55,7 +55,6 @@
         header #branding h1 {
             margin: 0;
         }
-
         header #branding p {
             margin: 0;
         }
