--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
             padding: 10px 0;
             border-bottom: #77a1d3 3px solid;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
         }
         header a {
@@ -50,8 +50,12 @@
         }
         header #branding {
             flex: 1;
+            text-align: center;
         }
         header #branding h1 {
+            margin: 0;
+        }
+        header #branding p {
             margin: 0;
         }
         .section {
@@ -109,7 +113,7 @@
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology Officer</p>
+            <p>Chief Technology and Information Officer</p>
         </div>
         <nav>
             <ul>
