--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
             padding: 10px 0;
             border-bottom: #77a1d3 3px solid;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
         }
         header a {
@@ -50,8 +50,12 @@
         }
         header #branding {
             flex: 1;
+            text-align: center;
         }
         header #branding h1 {
+            margin: 0;
+        }
+        header #branding p {
             margin: 0;
         }
         .section {
@@ -111,7 +115,7 @@
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology Officer</p>
+            <p>Chief Technology and Information Officer</p>
         </div>
         <nav>
             <ul>
@@ -141,32 +145,4 @@
 
             <h3>Product and Platform Engineering</h3>
             <ul>
-                <li><strong>Product Roadmap Development:</strong> Defining and executing multi-year product roadmaps, aligning technology investments with business objectives.</li>
-                <li><strong>Platform Modernization:</strong> Transitioning from monolithic to modular architectures, improving flexibility and time-to-market for new features.</li>
-                <li><strong>API & Microservices:</strong> Implementing API and microservices-based integration for seamless connectivity and enhanced interoperability.</li>
-                <li><strong>Cloud Strategy:</strong> Leading cloud adoption initiatives, consolidating data centers, and optimizing cloud infrastructure.</li>
-            </ul>
-
-            <h3>Operational Excellence</h3>
-            <ul>
-                <li><strong>Technology Spend Optimization:</strong> Identifying cost-saving opportunities and optimizing technology investments to enhance ROI.</li>
-                <li><strong>Quality Improvement:</strong> Standardizing procedures and implementing best practices to improve service quality and reduce variability.</li>
-                <li><strong>Data-Driven Decision Making:</strong> Leveraging advanced analytics to drive business insights and support strategic decision-making.</li>
-            </ul>
-
-            <h3>Team and Stakeholder Management</h3>
-            <ul>
-                <li><strong>Leadership and Mentorship:</strong> Building and leading high-performing teams, fostering a culture of collaboration and innovation.</li>
-                <li><strong>Stakeholder Engagement:</strong> Establishing strong relationships with business leaders and stakeholders, ensuring alignment of technology initiatives with business needs.</li>
-                <li><strong>Change Management:</strong> Leading organizational change initiatives to support business transformation and ensure successful implementation of new technologies.</li>
-            </ul>
-
-
-            <p>I have played CTO, CIO, or CDO roles in my career at publically listed technology and consulting companies. I value add to companies with my expertise to drive business growth and technological advancement.</p>
-        </section>
-        
-    <footer>
-        <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
-    </footer>
-</body>
-</html>
+                <li><strong>Product Roadmap Development:</strong> Defining and executing multi-year product roadmaps, aligning technology investmen
