--- a/testimonials.html
+++ b/testimonials.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - Testimonials</title>
-    <meta name="description" content="Testimonials from colleagues and clients about Rahul Gupta's exceptional leadership and technology expertise.">
-    <meta name="keywords" content="Rahul Gupta, CTO, Testimonials, leadership, technology expertise, client feedback, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent, ealthcare, Health Care, Financial Services, Banking, Insurance, Call Center, BPO, Technology Consulting">
+    <meta name="description" content="Testimonials and recommendations for Rahul Gupta, a seasoned technology leader.">
+    <meta name="keywords" content="Rahul Gupta, CTO, Chief Technology Officer, testimonials, recommendations, technology leader, innovation, leadership, digital transformation">
     <meta name="author" content="Rahul Gupta">
     <style>
         body {
@@ -69,20 +69,11 @@
             text-align: center;
             padding: 10px 0;
         }
-        .flex-container {
-            display: flex;
-            align-items: flex-start;
-            flex-wrap: wrap;
-        }
-        .flex-container img {
-            width: 150px;
-            height: auto;
-            border-radius: 50%;
-            margin-right: 20px;
-            flex-shrink: 0;
-        }
-        .flex-container div {
-            flex: 1;
+        blockquote {
+            border-left: 5px solid #77a1d3;
+            padding-left: 10px;
+            margin: 20px 0;
+            font-style: italic;
         }
         @media (max-width: 768px) {
             .container {
@@ -99,14 +90,6 @@
             header li {
                 padding: 10px 0;
                 border: none;
-            }
-            .flex-container {
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-            }
-            .flex-container img {
-                margin: 0 0 20px 0;
             }
         }
     </style>
@@ -133,11 +116,18 @@
     <div class="container">
         <section id="testimonials" class="section">
             <h2>Testimonials</h2>
+
             <blockquote>
-                <p>"Rahul is an exceptional technology leader who has a keen ability to balance strategic vision with operational execution. His work at Conduent has been transformative." - John Doe, Former Colleague</p>
+                <p>"Rahul is an exceptional and dynamic leader who combines deep technical knowledge with a strategic mindset. His unflagging support of his teams, combined with his ability to quickly course correct an extremely large troubled product and technology delivery organization, makes him a true asset to any organization needing to transform and lead their product strategy and delivery services." - Anna Thwaits, Professional Services Delivery Executive at Capgemini, Oracle, KPIT</p>
             </blockquote>
             <blockquote>
-                <p>"Working with Rahul has been a great experience. His insights into technology and his ability to drive change are truly commendable." - Jane Smith, Former Client</p>
+                <p>"Rahul is an exceptional Leader with whom I had the pleasure of working closely as his HR Business Partner between 2014-2017. His leadership and strategic vision have been instrumental in driving BU's success. He consistently demonstrated a deep understanding of business needs and effectively aligned HR strategies to support our goals. His ability to foster a collaborative and inclusive work environment significantly boosted team morale and productivity. Beyond his professional acumen, Rahul is a compassionate leader who genuinely cares about his team’s well-being and development. His mentorship and guidance have been invaluable to many, including myself. His dedication, expertise, and people-centric approach make him an asset to any organization & I would love to work with him again in future." - Prarthana Mitra, HR Business Partner - Lead at Capgemini</p>
+            </blockquote>
+            <blockquote>
+                <p>"I have known Rahul for a while as my client and a senior leader in the industry. Rahul is truly exceptional. A thought leader with great business & Technology acumen and a leader who can drive great outcomes. I have learned a lot from him, enjoyed doing business with him. He will be a tremendous asset to any team." - Angan Guha, MD & CEO @ Birlasoft</p>
+            </blockquote>
+            <blockquote>
+                <p>"My association with Rahul goes back almost 9 years now, and his leadership style is unique. Empowering his team, letting them take the bold steps, and then standing behind them like a pillar, are his core ethos. His ability to understand customer's pain points, clarity of the vendor/OEM ecosystem, connects across the industry - be it BFSI, Retail, Manufacturing, and above all, the simple approach to any business scenario using the 'KISS' model ('Keep it a Simple Solution'), makes working with him a pleasure. He drives his team to have a view on 'equity value' of their own thereby inculcating a healthy competition within. He can keep the vendor and customer ecosystem in good books and deliver with great results, based on his strong interpersonal abilities. He has orchestrated some un-imaginable deals, constructs in past - be it taking over a large BFSI event from a leading IPP, to signing multi-year deals at the booth of a conference, and continues to build solutions that are focused on addressing pain points commonly seen in the industry. Truly an asset and a great leader. Above all, a great Friend. Best wishes always!" - Harshawardhan Laghate, Consulting | Enterprise Solutions | Business Risk Management</p>
             </blockquote>
         </section>
     </div>
