--- a/services.html
+++ b/services.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - Expertise</title>
-    <meta name="description" content="Services offered by Rahul Gupta, including CTO, CIO, CDO advisory services, technology spend optimization, and transformation leadership.">
-    <meta name="keywords" content="Rahul Gupta, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent, Services, technology advisory, CIO, CDO, technology spend optimization, digital transformation, leadership, ealthcare, Health Care, Financial Services, Banking, Insurance, Call Center, BPO, Technology Consulting">
+    <meta name="description" content="Expertise and services offered by Rahul Gupta, a seasoned technology leader.">
+    <meta name="keywords" content="Rahul Gupta, CTO, Chief Technology Officer, expertise, services, technology leader, innovation, digital transformation">
     <meta name="author" content="Rahul Gupta">
     <style>
         body {
@@ -69,21 +69,6 @@
             text-align: center;
             padding: 10px 0;
         }
-        .flex-container {
-            display: flex;
-            align-items: flex-start;
-            flex-wrap: wrap;
-        }
-        .flex-container img {
-            width: 150px;
-            height: auto;
-            border-radius: 50%;
-            margin-right: 20px;
-            flex-shrink: 0;
-        }
-        .flex-container div {
-            flex: 1;
-        }
         @media (max-width: 768px) {
             .container {
                 width: 95%;
@@ -99,14 +84,6 @@
             header li {
                 padding: 10px 0;
                 border: none;
-            }
-            .flex-container {
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-            }
-            .flex-container img {
-                margin: 0 0 20px 0;
             }
         }
     </style>
@@ -133,16 +110,20 @@
     <div class="container">
         <section id="services" class="section">
             <h2>Expertise</h2>
-            <p>As a seasoned technology leader, I bring a wealth of experience and expertise in driving business growth through technological innovation. Here are some key areas of my expertise:</p>
-
-            <h3>Technology Leadership</h3>
+            <p>With extensive experience in technology platform transformation, product and services modernization, and technology spend optimization, I offer the following consulting services:</p>
             <ul>
-                <li><strong>Strategic IT Planning:</strong> Crafting and executing strategic IT roadmaps aligned with business goals, ensuring competitive advantage and sustainable growth.</li>
-                <li><strong>Digital Transformation:</strong> Leading comprehensive digital transformation initiatives, transitioning from legacy systems to advanced digital platforms.</li>
-                <li><strong>AI/ML Integration:</strong> Embedding AI and ML into core products to drive innovation and enhance functionality.</li>
-                <li><strong>Cloud Native Engineering:</strong> Adopting cloud-native architectures to improve scalability, efficiency, and cost-effectiveness.</li>
+                <li><strong>CTO Advisory Services:</strong> Strategic technology planning, innovation leadership, and technology roadmap development.</li>
+                <li><strong>CIO Advisory Services:</strong> IT infrastructure optimization, enterprise application management, and IT operations improvement.</li>
+                <li><strong>CDO Advisory Services:</strong> Data strategy formulation, data governance, and leveraging data for business insights.</li>
+                <li><strong>Technology Spend Optimization:</strong> Identifying cost-saving opportunities, optimizing technology investments, and enhancing ROI.</li>
+                <li><strong>Transformation Leadership:</strong> Leading digital transformation initiatives, modernizing legacy systems, and driving organizational change.</li>
             </ul>
+            <p>If you are looking to hire a seasoned technology leader for CTO, CIO, or CDO roles, I am open to exploring opportunities where I can bring my expertise to drive business growth and technological advancement.</p>
+        </section>
+    </div>
 
-            <h3>Product and Platform Engineering</h3>
-            <ul>
-                <li><strong>Product Roadmap Development:</strong> Defining and executing multi-year product roadmaps, aligning technology investmen
+    <footer>
+        <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
