--- a/services.html
+++ b/services.html
@@ -110,14 +110,65 @@
     <div class="container">
         <section id="services" class="section">
             <h2>Expertise</h2>
-            <p>With extensive experience in technology platform transformation, product and services modernization, and technology spend optimization, I offer the following consulting services:</p>
+            <p>With a robust background in technology leadership and a track record of driving transformative initiatives, I offer expertise in the following areas:</p>
+            
+            <h3>Technology Leadership and Strategy</h3>
             <ul>
-                <li><strong>CTO Advisory Services:</strong> Strategic technology planning, innovation leadership, and technology roadmap development.</li>
-                <li><strong>CIO Advisory Services:</strong> IT infrastructure optimization, enterprise application management, and IT operations improvement.</li>
-                <li><strong>CDO Advisory Services:</strong> Data strategy formulation, data governance, and leveraging data for business insights.</li>
-                <li><strong>Technology Spend Optimization:</strong> Identifying cost-saving opportunities, optimizing technology investments, and enhancing ROI.</li>
-                <li><strong>Transformation Leadership:</strong> Leading digital transformation initiatives, modernizing legacy systems, and driving organizational change.</li>
+                <li><strong>Strategic Technology Planning:</strong> Over 20 years of experience in aligning technology strategies with business goals, driving innovation, and achieving sustainable growth.</li>
+                <li><strong>Digital Transformation:</strong> Successfully led large-scale digital transformation projects, transitioning enterprises from legacy systems to modern, cloud-native architectures.</li>
+                <li><strong>AI/ML Integration:</strong> Developed and launched AI, ML, and analytics products, embedding intelligence into core business processes to enhance decision-making and operational efficiency.</li>
             </ul>
+
+            <h3>Product and Platform Engineering</h3>
+            <ul>
+                <li><strong>Product Innovation:</strong> Spearheaded the development and implementation of over 150 technology products, including platforms for healthcare, financial services, and transportation.</li>
+                <li><strong>Modular and API-Driven Architecture:</strong> Advocated for and implemented modular designs and API-based integrations, enabling flexible and scalable solutions.</li>
+                <li><strong>Cloud Adoption:</strong> Drove cloud adoption strategies, consolidating data centers and enhancing agility and scalability of IT infrastructure.</li>
+            </ul>
+
+            <h3>Operational Excellence</h3>
+            <ul>
+                <li><strong>Technology Spend Optimization:</strong> Achieved significant cost savings and improved ROI through strategic vendor management and spend optimization initiatives.</li>
+                <li><strong>Process Improvement:</strong> Enhanced operational efficiency by streamlining processes and implementing best practices, resulting in improved margins and productivity.</li>
+                <li><strong>Security and Compliance:</strong> Ensured robust security frameworks and compliance with industry standards, safeguarding data integrity and customer trust.</li>
+            </ul>
+
+            <h3>Leadership and Team Building</h3>
+            <ul>
+                <li><strong>Team Leadership:</strong> Built and led high-performing teams, fostering a culture of innovation, collaboration, and continuous improvement.</li>
+                <li><strong>Change Management:</strong> Successfully managed organizational change, driving adoption of new technologies and processes across global teams.</li>
+                <li><strong>Stakeholder Engagement:</strong> Cultivated strong relationships with internal and external stakeholders, aligning technology initiatives with business objectives.</li>
+            </ul>
+
+            <h3>Industry Expertise</h3>
+            <ul>
+                <li><strong>Healthcare:</strong> Modernized Medicaid and commercial claims processing systems, pharmacy benefits management, and disease surveillance platforms.</li>
+                <li><strong>Financial Services:</strong> Innovated solutions for auto loan servicing, mortgage processing, and real-time payment systems.</li>
+                <li><strong>Transportation:</strong> Developed IoT and AI-enabled tolling and transit fare collection systems, enhancing public safety and efficiency.</li>
+                <li><strong>BPO and HRO:</strong> Transformed benefits administration, defined benefits, and defined contributions platforms, improving service delivery and compliance.</li>
+            </ul>
+
+            <h3>AI/ML Expertise</h3>
+            <ul>
+                <li><strong>AI/ML Strategy and Vision:</strong> Developed a comprehensive AI & Analytics vision aligned with the company's overall business strategy.</li>
+                <li><strong>AI Product Development:</strong> Spearheaded the development of AI products aimed at transforming various aspects of business operations, including digital assistants, medical imaging, and traffic management.</li>
+                <li><strong>AI Integration:</strong> Integrated AI capabilities into existing platforms, enhancing functionality and user experience.</li>
+            </ul>
+
+            <h3>Payments and Blockchain Expertise</h3>
+            <ul>
+                <li><strong>Real-Time Payments:</strong> Led the company's foray into real-time payments and ledger-based transactions, positioning the company as a leader in payment services.</li>
+                <li><strong>Blockchain Technology:</strong> Implemented blockchain solutions to streamline payment processes and improve security and transparency.</li>
+                <li><strong>Payments Platform Innovation:</strong> Developed and launched innovative payment solutions, managing significant transaction volumes and improving processing efficiency.</li>
+            </ul>
+
+            <h3>Cloud Transformation and Engineering</h3>
+            <ul>
+                <li><strong>Cloud Strategy:</strong> Defined and executed a cloud adoption strategy, increasing cloud usage from under 10% to over 60%.</li>
+                <li><strong>Data Center Consolidation:</strong> Consolidated multiple data centers, reducing operational costs and enhancing scalability.</li>
+                <li><strong>Cloud-Native Product Development:</strong> Developed cloud-native products, leveraging the scalability and flexibility of cloud platforms to drive business growth.</li>
+            </ul>
+
             <p>If you are looking to hire a seasoned technology leader for CTO, CIO, or CDO roles, I am open to exploring opportunities where I can bring my expertise to drive business growth and technological advancement.</p>
         </section>
     </div>
