--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             display: flex;
             align-items: flex-start;
             flex-wrap: wrap;
+            text-align: left;
         }
         .flex-container img {
             width: 150px;
@@ -103,7 +104,7 @@
             .flex-container {
                 flex-direction: column;
                 align-items: center;
-                text-align: center;
+                text-align: left;
             }
             .flex-container img {
                 margin: 0 0 20px 0;
